--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Vote for Your Favorite Image</h1>
     <div class="image-container">
         <div>
-            <img src="image1.jpg" alt="Image 1">
+            <img src="images/PXL_20221031_220345409.jpg" alt="Image 1">
             <button onclick="vote('image1')">Vote for Image 1</button>
         </div>
         <div>
