--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button onclick="vote('image1')">Vote for Image 1</button>
         </div>
         <div>
-            <img src="image2.jpg" alt="Image 2">
+            <img src="images/PXL_20230721_041129703.jpg" alt="Image 2">
             <button onclick="vote('image2')">Vote for Image 2</button>
         </div>
     </div>
