--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Voting</title>
+    <title>Cute Dogs</title>
     <style>
         .image-container {
             display: flex;
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1>Vote for Your Favorite Image</h1>
+    <h1>Vote for Your Favorite Picture</h1>
     <div class="image-container">
         <div>
             <img src="images/PXL_20221031_220345409.jpg" alt="Image 1">
