--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>Vote for Your Favorite Picture</h1>
     <div class="image-container">
         <div>
-            <img src="images/PXL_20221031_220345409.jpg" alt="Image 1">
+            <img src="images/PXL_20221031_220345409.jpg" width="400" height="300" alt="Image 1">
             <button onclick="vote('image1')">Vote for Image 1</button>
         </div>
         <div>
-            <img src="images/PXL_20230721_041129703.jpg" alt="Image 2">
+            <img src="images/PXL_20230721_041129703.jpg" width="400" height="300" alt="Image 2">
             <button onclick="vote('image2')">Vote for Image 2</button>
         </div>
     </div>
